# ibis-substrait

./: .envrc  .gitattributes  .gitignore  .prettierignore  .releaserc.js  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  buf.gen.yaml  build.py  default.nix  flake.nix  gen-protos.sh  pixi.toml  poetry-overrides.nix  pre-commit.nix  proto_prefix.py  pyproject.toml  rebuild_protos.sh  setup.cfg  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: auto-rebase.yml  ci.yml  codeql-analysis.yml  release.yml  renovate.yml  update-deps.yml
ci/release/: dry_run.sh  prepare.sh  run.sh  verify.sh
dev/: lockfile_diff.sh
ibis_substrait/: __init__.py
ibis_substrait/compiler/: core.py  decompile.py  extension_language.py  function_registry.py  mapping.py  translate.py
ibis_substrait/compiler/translator/: base.py  ibis3.py  ibis4.py  ibis5.py  window.py
ibis_substrait/expr/operations/: relations.py
ibis_substrait/extensions/: functions_aggregate_generic.yaml
ibis_substrait/proto/: __init__.pyi  extension_rels_pb2.py  extension_rels_pb2.pyi
ibis_substrait/proto/substrait/: __init__.pyi  algebra_pb2.py  algebra_pb2.pyi  capabilities_pb2.py  capabilities_pb2.pyi  expression_pb2.py  expression_pb2.pyi  function_pb2.py  function_pb2.pyi  parameterized_types_pb2.py  parameterized_types_pb2.pyi  plan_pb2.py  plan_pb2.pyi  relations_pb2.py  relations_pb2.pyi  type_expressions_pb2.py  type_expressions_pb2.pyi  type_pb2.py  type_pb2.pyi
ibis_substrait/proto/substrait/extensions/: __init__.pyi  extensions_pb2.py  extensions_pb2.pyi
ibis_substrait/proto/substrait/ibis/: __init__.pyi  algebra_pb2.py  algebra_pb2.pyi  capabilities_pb2.py  capabilities_pb2.pyi  extended_expression_pb2.py  extended_expression_pb2.pyi  function_pb2.py  function_pb2.pyi  parameterized_types_pb2.py  parameterized_types_pb2.pyi  plan_pb2.py  plan_pb2.pyi  type_expressions_pb2.py  type_expressions_pb2.pyi  type_pb2.py  type_pb2.pyi
ibis_substrait/proto/substrait/ibis/extensions/: extensions_pb2.py  extensions_pb2.pyi
ibis_substrait/tests/: conftest.py
ibis_substrait/tests/compiler/: conftest.py  parity_utils.py  test_compiler.py  test_decompiler.py  test_extension_language.py  test_extensions.py  test_function_registry.py  test_literal.py  test_parity.py  test_tpch.py
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h01/: tpc_h01.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h02/: tpc_h02.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h03/: tpc_h03.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h04/: tpc_h04.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h05/: tpc_h05.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h06/: tpc_h06.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h07/: tpc_h07.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h08/: tpc_h08.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h09/: tpc_h09.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h090/: tpc_h090.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h091/: tpc_h091.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h092/: tpc_h092.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h09_1/: tpc_h09_1.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h09_2/: tpc_h09_2.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h10/: tpc_h10.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h11/: tpc_h11.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h11_0/: tpc_h11_0.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h11_1/: tpc_h11_1.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h12/: tpc_h12.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h13/: tpc_h13.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h14/: tpc_h14.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h15/: tpc_h15.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h16/: tpc_h16.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h17/: tpc_h17.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h18/: tpc_h18.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h19/: tpc_h19.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h20/: tpc_h20.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h21/: tpc_h21.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h22/: tpc_h22.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h220/: tpc_h220.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h221/: tpc_h221.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h22_0/: tpc_h22_0.json
ibis_substrait/tests/compiler/snapshots/test_tpch/test_compile/tpc_h22_1/: tpc_h22_1.json
ibis_substrait/tests/integration/: test_pyarrow.py
nix/: checks.nix  default.nix  overlay.nix  sources.json  sources.nix
proto/: extension_rels.proto
proto/substrait/: algebra.proto  type.proto
proto/substrait/extensions/: extensions.proto
tests/compiler/: conftest.py  test_compiler.py  test_decompiler.py  test_extensions.py  test_literal.py  test_tpch.py
tests/compiler/snapshots/test_tpch/test_compile/tpc_h10/: tpc_h10.json
tests/compiler/snapshots/test_tpch/test_compile/tpc_h12/: tpc_h12.json
tests/compiler/snapshots/test_tpch/test_compile/tpc_h13/: tpc_h13.json
tests/compiler/snapshots/test_tpch/test_compile/tpc_h19/: tpc_h19.json
