[tool.poetry]
name = "ibis-substrait"
version = "2.12.2"
packages = [{ include = "ibis_substrait" }]
homepage = "https://github.com/ibis-project/ibis-substrait"
repository = "https://github.com/ibis-project/ibis-substrait"
description = "Subtrait compiler for ibis"
authors = ["Ibis Contributors"]
maintainers = ["Ibis Contributors"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ibis-framework = ">=2,<4"
protobuf = "3.20.1" # protobuf==3.20 C extensions aren't compatible with 3.19.4

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^5.0.0"
ipython = "^8.2.0"
isort = "^5.9.3"
mypy = "^0.982"
mypy-protobuf = "^3.0.0"
protoletariat = "^0.9.0"
pydocstyle = "^6.1.1"
pytest = "^7.0.0"
pytest-clarity = "^1.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-randomly = "^3.10.1"
pytz = "^2022.1"
pyupgrade = "^2.26.0"
types-protobuf = "^3.18.1"
types-pytz = "^2022.0.0"
pytest-lazy-fixture = "^0.6.3"
substrait-validator = "^0.0.8"
ibis-framework = {version = ">=2,<4", extras = ["duckdb"]}
packaging = "^21.3"
pathspec = "0.10.1"

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
  "--ignore=site-packages",
  "--ignore=dist-packages",
  "--ignore=.direnv",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "error",
  # older importlib metadata that there's no real point in breaking with
  "ignore:SelectableGroups:DeprecationWarning",
  "ignore:`parse_type` is deprecated:FutureWarning",
  # ibis on postgres + windows
  "ignore:locale specific date formats:UserWarning",
]
markers = ["no_decompile"]
norecursedirs = ["site-packages", "dist-packages", ".direnv"]

[tool.black]
line_length = 88
exclude = "ibis_substrait/proto"

[tool.isort]
profile = "black"
skip_glob = ["ibis_substrait/proto/**/*.py"]

[tool.mypy]
exclude = 'tests/.+\.py'
ignore_missing_imports = true
# untyped things
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# Any handling
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
# None/Optional handling
no_implicit_optional = true
# show more context on failure
show_error_context = true
show_error_codes = true

[tool.pydocstyle]
inherit = false
convention = "numpy"
match_dir = "ibis_substrait"
add_ignore = ["D100", "D101", "D102", "D103", "D104", "D105"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
